# isen-sfml-asteroid

./: CMakeLists.txt  README.md
docs/: Architecture.puml
src/: main.cpp
src/core/: Engine.cpp  Engine.h  World.cpp  World.h
src/entities/: Asteroid.cpp  Asteroid.h  Entity.cpp  Entity.h  Projectile.cpp  Projectile.h  SpaceShip.cpp  SpaceShip.h
src/graphics/: AssetsManager.cpp  AssetsManager.h
src/ui/: UiComponent.cpp  UiComponent.h
